--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,3 +25,15 @@ services:
       - .env
     depends_on:
       - minio
+
+  frontend:
+    build: ./frontend
+    container_name: frontend
+    ports:
+      - "3000:3000"
+    volumes:
+      - ./frontend:/app
+    env_file:
+      - .env
+    depends_on:
+      - backend
