--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,15 +1,16 @@
-# Use official Python image
 FROM python:3.11-slim
 
-# Set working directory
+# Set the working directory
 WORKDIR /app
 
-# Copy requirements and install
+# Copy only requirements first
 COPY requirements.txt .
+
+# Install dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy all backend files
-COPY ./app ./app
+# Set Python path so `app.*` imports work
+ENV PYTHONPATH=/app
 
-# Set the entry point
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
+# Run with hot reload
+CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload", "--reload-dir", "app", "--reload-delay", "0.5", "--reload-include", "*.py"]
