--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,23 +17,24 @@ services:
   backend:
     build: ./backend
     container_name: backend
+    env_file:
+      - .env
     ports:
       - "8000:8000"
     volumes:
-      - ./backend:/app
-    env_file:
-      - .env
-    depends_on:
-      - minio
+      - ./backend:/app           #
+    environment:
+      - PYTHONPATH=/app
 
-  frontend:
-    build: ./frontend
-    container_name: frontend
-    ports:
-      - "3000:3000"
-    volumes:
-      - ./frontend:/app
-    env_file:
-      - .env
-    depends_on:
-      - backend
+#
+#  frontend:
+#    build: ./frontend
+#    container_name: frontend
+#    ports:
+#      - "3000:3000"
+#    volumes:
+#      - ./frontend:/app
+#    env_file:
+#      - .env
+#    depends_on:
+#      - backend
